- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
P4: Low
 - 
    6.2.4, 6.3.0
 - 
    None
 - 
    Windows 10 N
 
App that is linked against Qt6Multimedia.dll failed to start on Windows 10 N edition.

This is specific Windows edition with limited Multimedia features.
 See https://www.howtogeek.com/322112/what-is-an-n-or-kn-edition-of-windows/
This happens because since Qt 6.2 Qt Multimedia became statically dependent from EVR.dll (and other WMF libraries).
dumpbin /dependents e:\Qt\6.3.0\msvc2019_64\bin\Qt6Multimedia.dll
Microsoft (R) COFF/PE Dumper Version 14.29.30145.0
Copyright (C) Microsoft Corporation.  All rights reserved.
Dump of file e:\Qt\6.3.0\msvc2019_64\bin\Qt6Multimedia.dll
File Type: DLL
  Image has the following dependencies:
    d3d9.dll
    dxva2.dll
    EVR.dll
    MF.dll
    MFPlat.DLL
    MFReadWrite.dll
    ole32.dll
    PROPSYS.dll
    USER32.dll
    WINMM.dll
    Qt6Network.dll
    Qt6Gui.dll
    Qt6Core.dll
    KERNEL32.dll
    SHELL32.dll
    MSVCP140.dll
    VCRUNTIME140.dll
    VCRUNTIME140_1.dll
    api-ms-win-crt-runtime-l1-1-0.dll
    api-ms-win-crt-string-l1-1-0.dll
    api-ms-win-crt-math-l1-1-0.dll
    api-ms-win-crt-heap-l1-1-0.dll
  Summary
        7000 .data
        9000 .pdata
       49000 .rdata
        2000 .reloc
        1000 .rsrc
       72000 .text
But in Qt 5 there were no such strong dependencies (I suppose all required libraries where loaded in runtime)
dumpbin /dependents e:\Qt\5.15.2\msvc2019_64\bin\Qt5Multimedia.dll
Microsoft (R) COFF/PE Dumper Version 14.29.30145.0
Copyright (C) Microsoft Corporation.  All rights reserved.
Dump of file e:\Qt\5.15.2\msvc2019_64\bin\Qt5Multimedia.dll
File Type: DLL
  Image has the following dependencies:
    Qt5Network.dll
    Qt5Gui.dll
    Qt5Core.dll
    MSVCP140.dll
    KERNEL32.dll
    VCRUNTIME140.dll
    api-ms-win-crt-runtime-l1-1-0.dll
    api-ms-win-crt-string-l1-1-0.dll
    api-ms-win-crt-math-l1-1-0.dll
    api-ms-win-crt-heap-l1-1-0.dll
  Summary
        4000 .data
        9000 .pdata
       4D000 .rdata
        2000 .reloc
        1000 .rsrc
       5B000 .text
So this is definitelly a regression for new Qt Multimedia in Qt 6
- is duplicated by
 - 
                    
QTBUG-112515 Windows: quickmultimediaplugin.dll missing system dependency forces app to exit
-         
 - Closed
 
 -