Remove load-time dependency on Windows Media Foundation

This patch removes load-time dependency on Windows Media Foundation.
Only QWindowsResampler is dependent on WMF, since it uses the WMF
resampler. Here, this functionality is loaded on demand when
QWindowsResamplper is used for the first time.

Fixes: QTBUG-103729
Change-Id: Ic63f72af5c06b36ac2c9f08235f913d9448444a4
Reviewed-by: Lars Knoll <lars@knoll.priv.no>
(cherry picked from commit b5d9ad22747a431cc65c73a940df6f8914050b56)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>