src/multimedia/windows/qwindowsresampler_p.h
@@ -20,6 +20,7 @@
 #include <qbytearrayview.h>
 #include <qaudioformat.h>
 #include <private/qwindowsiupointer_p.h>
+#include <private/qwindowsmediafundation_p.h>
 #include <qt_windows.h>
 #include <mftransform.h>
 
@@ -53,6 +54,7 @@ private:
     HRESULT processOutput(QByteArray &out);
 
     QWindowsIUPointer<IMFTransform> m_resampler;
+    QWindowsMediaFundation *m_wmf = nullptr;
 
     bool m_resamplerNeedsSampleBuffer = false;
     quint64 m_totalInputBytes = 0;
